<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="clip_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000000"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:text="FISHCHOICE"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/rectangle_2"
        android:layout_alignBaseline="@id/rectangle_2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:translationZ="4dp"
        android:background="@drawable/imageuser_icon" />

    <LinearLayout
        android:id="@+id/rectangle_2"
        android:orientation="vertical"
        android:layout_width="307dp"
        android:layout_height="333dp"
        android:background="@drawable/rectangle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_short"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <EditText
                android:id="@+id/name"
                android:padding="10dp"
                android:hint="@string/hint_name"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_edittext"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="match_parent"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:elevation="4dp"
                android:outlineAmbientShadowColor="#FFFFFF"
                android:background="@drawable/rectangle_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="-30dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_link_to_register"
                android:textColor="#000"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#000"
        android:layout_alignParentBottom="true">

    </RelativeLayout>


</RelativeLayout>